re-css the loader

--- a/html/recruitment/form-recruit.html
+++ b/html/recruitment/form-recruit.html
@@ -4,10 +4,9 @@
     <title>Form TNS SeSC</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=yes">
+    <!-- content="width=device-width, initial-scale=1, shrink-to-fit=no" -->
+    
 
     <!-- Bootstrap CSS v5.2.0-beta1 -->
     <link
@@ -573,7 +572,9 @@
     </footer>
     <div class="overlayModal">
     </div>
-    <div class="loader"></div>
+    <div class="loader-container">
+      <div class="loader"></div>
+    </div>
 
     <!-- Bootstrap JavaScript Libraries -->
     <script
