--- a/html/recruitment/confirmSubmission.html
+++ b/html/recruitment/confirmSubmission.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Confirm the successful submission</title>
+    <title>Confirm the successful submission - SeSC</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
@@ -34,12 +34,14 @@
       referrerpolicy="no-referrer"
     />
 
+    <link rel="shortcut icon" type="image/png" href="/SeSC/LogoSeSC.png" />
+
     <!-- css file -->
     <link rel="stylesheet" href="/style/recruitment/style_cf-recruit.css" />
   </head>
 
   <body>
-    <section class="main-body">
+    <section class="main-body text-center">
       <div class="container text-center pt-3">
         <img src="/SeSC/cap-bo-sesc.PNG" alt="Bò SeSC" class="thank-img" />
         <div class="btn-container mt-5">
