--- a/html/recruitment/form-recruit.html
+++ b/html/recruitment/form-recruit.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Form TNS SeSC</title>
+    <title>Form TNS - SeSC</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=yes">
@@ -421,50 +421,57 @@
                     </div>
                 </div>
                 <div class="tab-dpt">
-                    <!-- xóa flex-column để hiện hàng ngang -->
+                    <!-- button -->
                     <div class="nav nav-pills me-3 justify-content-center" role="tablist">
-                      <button
-                        class="nav-link border border-dark rounded text-dark mx-2 disabled"
-                        id="btn-bcm"
-                        data-bs-toggle="pill"
-                        data-bs-target="#v-pills-bcm"
-                      >
-                        Ban Chuyên Môn
-                      </button>
-                      <button
-                        class="nav-link border border-dark rounded text-dark mx-2 disabled"
-                        data-bs-toggle="pill"
-                        data-bs-target="#v-pills-bdn"
-                        id="btn-bdn"
-                      >
-                        Ban Đối Ngoại
-                      </button>
-                      <button
-                        class="nav-link border border-dark rounded text-dark mx-2 disabled"
-                        data-bs-toggle="pill"
-                        data-bs-target="#v-pills-bns"
-                        id="btn-bns"
-                      >
-                        Ban Nhân Sự
-                      </button>
-                      <button
-                        class="nav-link border border-dark rounded text-dark mx-2 disabled"
-                        data-bs-toggle="pill"
-                        data-bs-target="#v-pills-btt"
-                        id="btn-btt"
-                      >
-                        Ban Truyền Thông
-                      </button>
-                      <button
-                        class="nav-link border border-dark rounded text-dark mx-2 disabled"
-                        data-bs-toggle="pill"
-                        data-bs-target="#v-pills-tcsk"
-                        id="btn-tcsk"
-                      >
-                        Ban Tổ Chức Sự Kiện
-                      </button>
+                      <div class="pb-3 px-3">
+                        <button
+                          class="nav-link border border-dark rounded text-dark disabled"
+                          id="btn-bcm"
+                          data-bs-toggle="pill"
+                          data-bs-target="#v-pills-bcm"
+                        >
+                          Ban Chuyên Môn
+                        </button>
+                      </div>
+                      <div class="pb-3 px-3">
+                        <button
+                          class="nav-link border border-dark rounded text-dark disabled"
+                          data-bs-toggle="pill"
+                          data-bs-target="#v-pills-bdn"
+                          id="btn-bdn"
+                        >
+                          Ban Đối Ngoại
+                        </button>
+                      </div>
+                      <div class="pb-3 px-3">
+                        <button class="nav-link border border-dark rounded text-dark disabled" data-bs-toggle="pill" data-bs-target="#v-pills-bns" id="btn-bns">
+                          Ban Nhân Sự
+                        </button>
+                      </div>
+                      <div class="pb-3 px-3">
+                        <button
+                          class="nav-link border border-dark rounded text-dark disabled"
+                          data-bs-toggle="pill"
+                          data-bs-target="#v-pills-btt"
+                          id="btn-btt"
+                        >
+                          Ban Truyền Thông
+                        </button>
+                      </div>
+                      <div class="pb-3 px-3">
+                        <button
+                          class="nav-link border border-dark rounded text-dark disabled"
+                          data-bs-toggle="pill"
+                          data-bs-target="#v-pills-tcsk"
+                          id="btn-tcsk"
+                        >
+                          Ban Tổ Chức Sự Kiện
+                        </button>
+                      </div>
+                      <!-- <div class="col-sm-12 col-md-2"></div> -->
                     </div>
-                    <!-- mỗi tab-pane phải cần có id để button trỏ tới nó; aria là các thuộc tính cho người khiếm thị; có thể xóa các thuộc tính như type, role -->
+                    
+                    <!-- content -->
                     <div class="tab-content" id="v-pills-tabContent">
                       <div class="tab-pane fade" id="v-pills-bcm">
                         <div class="mb-3">
