--- a/html/recruitment/confirmSubmission.html
+++ b/html/recruitment/confirmSubmission.html
@@ -41,7 +41,7 @@
   </head>
 
   <body>
-    <section class="main-body text-center">
+    <section class="main-body">
       <div class="container text-center pt-3">
         <img src="/SeSC/cap-bo-sesc.PNG" alt="Bò SeSC" class="thank-img" />
         <div class="btn-container mt-5">
