--- a/html/contact/contact.html
+++ b/html/contact/contact.html
@@ -1,117 +1,209 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Securities Studying Club - Never Back Down</title>
-  
-  <!-- gg fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap" rel="stylesheet">
+  <head>
+    <title>Liên hệ - CLB Tài chính - Chứng khoán SeSC</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
-  <!-- css files -->
-  <link rel="stylesheet" href="/style/home/style.css">
-  <link rel="stylesheet" href="/style/contact/style_contact.css">
+    <!-- Bootstrap CSS v5.2.0-beta1 -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      crossorigin="anonymous"
+    />
 
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XE0JP45WDF"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-XE0JP45WDF');
-  </script>
-</head>
-<body>
-<div id="preloader"></div>
-<!--------Header----------------->
-<section class ="sub-header">
-  <nav>
-    <a href="index.html"><img src="/SeSC/Logo_small_trans.png" target="_blank"></a>
-    <div class="nav-links" id="navLinks">
-      <ion-icon class="fa fa-times" name="close-outline" onclick="hideMenu()"></ion-icon>
-      <ul>
-        <li class="nav"><a href="/html/home/index.html">HOME</a></li>
-        <li class="nav"><a href="/html/aboutUs/about.html">ABOUT US</a></li>
-        <li class="nav"><a href="/html/fsc/fsc.html">FSC</a></li>
-        <li class="nav"><a href="/html/blog/blog.html">BLOG</a></li>
-        <li class="nav"><a href="/html/recruitment/recruitment.html">RECRUITMENT</a></li> 
-        <li class="nav"><a href="/html/contact/contact.html">CONTACT</a></li>   
-      </ul>   
-    </div>
-    <ion-icon class="fa fa-bars" name="menu-outline" onclick="showMenu()"></ion-icon>
-  </nav>
-  <div class="text-box">
-    <h1>Contact Us</h1>
-</section>
-<!--------contact us----------------->
-<section class="location">
-  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3919.057498651273!2d106.71086331411678!3d10.8069082615871!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x317528a33d45ec4b%3A0xbc43c25806fdd0b9!2sForeign%20Trade%20University%20-%20Campus%20II%20in%20Ho%20Chi%20Minh%20City!5e0!3m2!1sen!2s!4v1650535884234!5m2!1sen!2s" width="500" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-</section>
-<section class="contact-us">
-  <div class="row">
-    <div class="contact-col">
-      <div>
-        <ion-icon name="home"></ion-icon>
-        <span>
-          <h5>15 D5 street, Ward 25</h5>
-          <p>Binh Thanh, Ho Chi Minh City, Vietnam</p>
-        </span>
+    <!-- gg fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700&family=Montserrat:wght@400;500;600;700&family=Pacifico&family=Quicksand:wght@300;400;600;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- font awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+      integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+
+    <link rel="shortcut icon" type="image/png" href="/SeSC/LogoSeSC.png"/>
+
+    <!-- css files -->
+    <link rel="stylesheet" href="/style/home/style.css">
+    <link rel="stylesheet" href="/style/contact/style_contact.css" />
+  </head>
+  <body>
+    <!--------Header----------------->
+    <header class="header">
+      <div class="container">
+        <nav class="navbar navbar-expand-lg navbar-light">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="/html/home/index.html">
+              <img src="/SeSC/Logo_small_trans.png" target="_blank" />
+            </a>
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#navbarNav"
+              aria-controls="navbarNav"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+              id="btn-dropDownMenu"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div
+              class="collapse navbar-collapse justify-content-end navMenu"
+              id="navbarNav"
+            >
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a
+                    class="nav-link"
+                    aria-current="page"
+                    href="/html/home/index.html"
+                    >TRANG CHỦ</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/html/aboutUs/about.html"
+                    >VỀ SeSC</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/html/fsc/fsc.html">FSC</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/html/blog/blog.html">BLOG</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/html/recruitment/recruitment.html"
+                    >TUYỂN NHÂN SỰ</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/html/contact/contact.html"
+                    >LIÊN HỆ</a
+                  >
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+        <div class="title">
+          <h2>LIÊN HỆ</h2>
+        </div>
       </div>
-      <div>
-        <ion-icon name="call"></ion-icon>
-        <span>
-          <h5>+84 911408383</h5>
-          <p>Monday to Saturday, 7AM to 6PM</p>
-        </span>
+    </header>
+    <section class="carousel">
+      <div class="container"></div>
+    </section>
+    <!--------contact us----------------->
+    <section class="location">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3919.057498651273!2d106.71086331411678!3d10.8069082615871!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x317528a33d45ec4b%3A0xbc43c25806fdd0b9!2sForeign%20Trade%20University%20-%20Campus%20II%20in%20Ho%20Chi%20Minh%20City!5e0!3m2!1sen!2s!4v1650535884234!5m2!1sen!2s" width="500" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </section>
+    <section class="contact-us">
+      <div class="row">
+        <div class="contact-col">
+          <div>
+            <ion-icon name="home"></ion-icon>
+            <span>
+              <h5>15 D5 street, Ward 25</h5>
+              <p>Binh Thanh, Ho Chi Minh City, Vietnam</p>
+            </span>
+          </div>
+          <div>
+            <ion-icon name="call"></ion-icon>
+            <span>
+              <h5>+84 911408383</h5>
+              <p>Monday to Saturday, 7AM to 6PM</p>
+            </span>
+          </div>
+          <div>
+            <ion-icon name="mail"></ion-icon>
+            <span>
+              <h5>info.sesc@gmail.com</h5>
+              <p>Email us your query</p>
+            </span>
+          </div>
+        </div>
+        <div class="contact-col">
+          <form>
+            <input id="name" name="name" type="text" placeholder="Enter your name" required>
+            <input id="email" name="email" type="email" placeholder="Enter your email address" required>
+            <input id="subject" name="subject" type="text" placeholder="Enter your subject" required>
+            <textarea id="message" name="message" rows="8" placeholder="Message" required></textarea>
+            <button type="submit" class="hero-btn green-btn">Send Message</button>
+          </form>
+        </div>
       </div>
-      <div>
-        <ion-icon name="mail"></ion-icon>
-        <span>
-          <h5>info.sesc@gmail.com</h5>
-          <p>Email us your query</p>
-        </span>
+    </section>
+    <!--------Footer--------------->
+    <footer class="footer">
+      <div class="container">
+        <h4>CLB Tài chính - Chứng khoán SeSC</h4>
+        <p>Thành lập vào ngày 01/04/2010, CLB Tài chính - Chứng khoán SeSC là CLB đầu tiên và duy nhất của ĐH Ngoại Thương TPHCM hoạt động trong lĩnh vực Tài chính - Chứng khoán. Với sứ mệnh phổ cập tri thức tài chính cho cộng đồng, Chúng Tôi cam kết không ngừng nâng cao chất lượng hoạt động, tiếp tục là bệ phóng cho các tài năng trong lĩnh vực Tài chính - Chứng khoán trong nhiều năm nữa.</p>
+        <div class="icons">
+          <a href="https://www.facebook.com/CaulacboChungKhoanSeSC" target="_blank"><i class="fab fa-facebook"></i></a>
+          <a href="https://www.linkedin.com/company/sesc-ftu2/mycompany/" target="_blank"><i class="fab fa-linkedin"></i></a>
+          <a href="https://www.tiktok.com/@fsc.10" target="_blank"><i class="fa-brands fa-tiktok"></i></a></ion-icon>
+        </div>
+        <p>Powered by  <i class="fa fa-heart"></i>  from SeSC</p>
       </div>
-    </div>
-    <div class="contact-col">
-      <form>
-        <input id="name" name="name" type="text" placeholder="Enter your name" required>
-        <input id="email" name="email" type="email" placeholder="Enter your email address" required>
-        <input id="subject" name="subject" type="text" placeholder="Enter your subject" required>
-        <textarea id="message" name="message" rows="8" placeholder="Message" required></textarea>
-        <button type="submit" class="hero-btn green-btn">Send Message</button>
-      </form>
-    </div>
-  </div>
-</section>
-<!--------Footer--------------->
-<section class="footer">
-  <h4>About Us</h4>
-  <p>Established on April 1, 2010, SeSC (Securities Studying Club) is currently the only club at FTU2 operating in the field of finance and securities.<br> This is an environment for students with the same passion to learn and share knowledge with each other.</p>
-  <div class="icons">
-    <a href="https://www.facebook.com/CaulacboChungKhoanSeSC" target="_blank"><ion-icon class="fa" name="logo-facebook"></ion-icon></a>
-    <a href="https://www.linkedin.com/company/sesc-ftu2/mycompany/" target="_blank"><ion-icon class="fa" name="logo-linkedin"></ion-icon></a>
-    <a href="https://www.tiktok.com/@fsc.10" target="_blank"><ion-icon class="fa" name="logo-tiktok"></ion-icon></a></ion-icon>
-  </div>
-  <p>Powered by  <ion-icon class="fa" name="heart-outline"></ion-icon>  from SeSC</p>
-</section>
-<!--------Javacrpt------->
-  <script>
-    function showMenu(){navLinks.style.right="0";}
-    function hideMenu(){navLinks.style.right="-200px";}
-  </script>
-  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-  <script>
-    window.addEventListener("load", function(){
-    setInterval(pippo, 1000)});
-    function pippo(){
-      var preloader = document.getElementById("preloader");
-      document.body.removeChild(preloader);
-    }
-  </script>
-</body>
-</body>
+    </footer>
+
+    <!-- Bootstrap JavaScript Libraries -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
+      integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk"
+      crossorigin="anonymous"
+    ></script>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js"
+      integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK"
+      crossorigin="anonymous"
+    ></script>
+
+    <!-- Sticky effect -->
+    <script>
+      var header = document.getElementsByClassName("header")[0];
+      var carousel = document.getElementsByClassName("carousel")[0];
+      var imgLogo = document.querySelector("body > header > div > nav > div > a > img");
+
+      window.onscroll = function () {
+        if (window.pageYOffset >= 300) {
+          header.classList.add("sticky");
+          document.querySelector("body > header > div > div").style.display =
+            "none";
+          imgLogo.src = "/SeSC/Logo_small.jpg";
+          imgLogo.style = "width: 50%; border-radius: 100px;";
+        } else {
+          header.classList.remove("sticky");
+
+          if(document.getElementById("navbarNav").className == "navbar-collapse justify-content-end navMenu collapse show") {
+            document.querySelector("body > header > div > div").style.display =
+            "none";
+          } else {
+            document.querySelector("body > header > div > div").style.display =
+            "block";
+          }
+
+          imgLogo.src = "/SeSC/Logo_small_trans.png";
+          imgLogo.style = "width: 70%;";
+        }
+      };
+    </script>
+  </body>
 </html>
 
 
