--- a/html/recruitment/form-recruit.html
+++ b/html/recruitment/form-recruit.html
@@ -103,9 +103,7 @@
       </div>
     </header>
     <section class="carousel">
-      <div class="container">
-        <!-- <h2>ĐƠN TUYỂN NHÂN SỰ VÒNG 1</h2> -->
-      </div>
+      <div class="container"></div>
     </section>
     <section class="form">
         <div class="container">
@@ -628,14 +626,6 @@
         }
       };
     </script>
-
-    <!-- Axios Librabry -->
-    <!-- <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.27.2/axios.min.js"
-      integrity="sha512-odNmoc1XJy5x1TMVMdC7EMs3IVdItLPlCeL5vSUPN2llYKMJ2eByTTAIiiuqLg+GdNr9hF6z81p27DArRFKT7A=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    ></script> -->
 
     <!-- SheetDb Librabry -->
     <script src="//sheetdb.io/api/js"></script>
