--- a/html/recruitment/recruitment.html
+++ b/html/recruitment/recruitment.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>TNS-SeSC</title>
+    <title>Tuyển Nhân Sự 2022 - SeSC</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
@@ -40,6 +40,8 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
 
+    <link rel="shortcut icon" type="image/png" href="/SeSC/LogoSeSC.png"/>
+
     <!-- css files -->
     <link rel="stylesheet" href="/style/recruitment/style_recruitment.css" />
   </head>
@@ -60,6 +62,7 @@
               aria-controls="navbarNav"
               aria-expanded="false"
               aria-label="Toggle navigation"
+              id="btn-dropDownMenu"
             >
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -101,12 +104,13 @@
             </div>
           </div>
         </nav>
+        <div class="title">
+          <h2>TUYỂN NHÂN SỰ</h2>
+        </div>
       </div>
     </header>
     <section class="carousel">
-      <div class="container">
-        <h2>TUYỂN NHÂN SỰ</h2>
-      </div>
+      <div class="container"></div>
     </section>
     <section class="intro-quote">
       <div class="container">
@@ -981,14 +985,21 @@
       window.onscroll = function () {
         if (window.pageYOffset >= 300) {
           header.classList.add("sticky");
-          document.querySelector("body > section > div > h2").style.display =
+          document.querySelector("body > header > div > div").style.display =
             "none";
           imgLogo.src = "/SeSC/Logo_small.jpg";
           imgLogo.style = "width: 50%; border-radius: 100px;";
         } else {
           header.classList.remove("sticky");
-          document.querySelector("body > section > div > h2").style.display =
+
+          if(document.getElementById("navbarNav").className == "navbar-collapse justify-content-end navMenu collapse show") {
+            document.querySelector("body > header > div > div").style.display =
+            "none";
+          } else {
+            document.querySelector("body > header > div > div").style.display =
             "block";
+          }
+
           imgLogo.src = "/SeSC/Logo_small_trans.png";
           imgLogo.style = "width: 70%;";
         }
@@ -1010,6 +1021,6 @@
     
 
 
-    <script src="/script/recruit.js"></script>
+    <script src="/script/main/recruit.js"></script>
   </body>
 </html>
