--- a/html/contact/contact.html
+++ b/html/contact/contact.html
@@ -108,42 +108,47 @@
       <div class="container"></div>
     </section>
     <!--------contact us----------------->
-    <section class="location">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3919.057498651273!2d106.71086331411678!3d10.8069082615871!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x317528a33d45ec4b%3A0xbc43c25806fdd0b9!2sForeign%20Trade%20University%20-%20Campus%20II%20in%20Ho%20Chi%20Minh%20City!5e0!3m2!1sen!2s!4v1650535884234!5m2!1sen!2s" width="500" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <section class="location" style="overflow: hidden">
+      <div class="container">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3919.057498651273!2d106.71086331411678!3d10.8069082615871!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x317528a33d45ec4b%3A0xbc43c25806fdd0b9!2sForeign%20Trade%20University%20-%20Campus%20II%20in%20Ho%20Chi%20Minh%20City!5e0!3m2!1sen!2s!4v1650535884234!5m2!1sen!2s" width="500" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
+      </div>
     </section>
     <section class="contact-us">
-      <div class="row">
-        <div class="contact-col">
-          <div>
-            <ion-icon name="home"></ion-icon>
-            <span>
-              <h5>15 D5 street, Ward 25</h5>
-              <p>Binh Thanh, Ho Chi Minh City, Vietnam</p>
-            </span>
+      <div class="container">
+        <div class="row">
+          <div class="contact-col">
+            <div>
+              <ion-icon name="home"></ion-icon>
+              <span>
+                <h5>15 D5 street, Ward 25</h5>
+                <p>Binh Thanh, Ho Chi Minh City, Vietnam</p>
+              </span>
+            </div>
+            <div>
+              <ion-icon name="call"></ion-icon>
+              <span>
+                <h5>+84 911408383</h5>
+                <p>Monday to Saturday, 7AM to 6PM</p>
+              </span>
+            </div>
+            <div>
+              <ion-icon name="mail"></ion-icon>
+              <span>
+                <h5>info.sesc@gmail.com</h5>
+                <p>Email us your query</p>
+              </span>
+            </div>
           </div>
-          <div>
-            <ion-icon name="call"></ion-icon>
-            <span>
-              <h5>+84 911408383</h5>
-              <p>Monday to Saturday, 7AM to 6PM</p>
-            </span>
+          <div class="contact-col">
+            <form>
+              <input id="name" name="name" type="text" placeholder="Enter your name" required>
+              <input id="email" name="email" type="email" placeholder="Enter your email address" required>
+              <input id="subject" name="subject" type="text" placeholder="Enter your subject" required>
+              <textarea id="message" name="message" rows="8" placeholder="Message" required></textarea>
+              <button type="submit" class="hero-btn green-btn">Send Message</button>
+            </form>
           </div>
-          <div>
-            <ion-icon name="mail"></ion-icon>
-            <span>
-              <h5>info.sesc@gmail.com</h5>
-              <p>Email us your query</p>
-            </span>
-          </div>
-        </div>
-        <div class="contact-col">
-          <form>
-            <input id="name" name="name" type="text" placeholder="Enter your name" required>
-            <input id="email" name="email" type="email" placeholder="Enter your email address" required>
-            <input id="subject" name="subject" type="text" placeholder="Enter your subject" required>
-            <textarea id="message" name="message" rows="8" placeholder="Message" required></textarea>
-            <button type="submit" class="hero-btn green-btn">Send Message</button>
-          </form>
         </div>
       </div>
     </section>
