--- a/html/recruitment/recruitment.html
+++ b/html/recruitment/recruitment.html
@@ -115,7 +115,7 @@
     <section class="intro-quote">
       <div class="container">
         <div class="row">
-          <div class="col-12 col-md-6 left">
+          <div class="col-sm-12 col-md-6 left mb-5">
             <h2>Never Back Down</h2>
             <p>
               Tuổi trẻ là một vòng xoay mà không phải ai cũng đủ bản lĩnh để rời
@@ -129,7 +129,7 @@
             </p>
             <button type="button" class="btn btn-success"><a href="/html/recruitment/form-recruit.html" target="_blank">ĐĂNG KÝ NGAY</a></button>
           </div>
-          <div class="col-12 col-md-6 right">
+          <div class="col-sm-12 col-md-6 right mb-5">
             <img src="/SeSC/sesc_quote.jpg" alt="SeSC Quote" />
           </div>
         </div>
@@ -139,25 +139,25 @@
       <div class="container">
         <!-- <div class="heading"><h2>SeSC - Một Hành Trình</h2></div> -->
         <div class="number row">
-          <div class="col-3">
+          <div class="col-sm-6 col-md-3">
             <div class="item_container">
               <h3 class="num">12</h3>
               <p>Năm</p>
             </div>
           </div>
-          <div class="col-3">
+          <div class="col-sm-6 col-md-3">
             <div class="item_container">
               <h3 class="num">80</h3>
               <p>Thành Viên</p>
             </div>
           </div>
-          <div class="col-3">
+          <div class="col-sm-6 col-md-3">
             <div class="item_container">
               <h3 class="num">1000</h3>
               <p>Cựu Thành Viên</p>
             </div>
           </div>
-          <div class="col-3">
+          <div class="col-sm-6 col-md-3">
             <div class="item_container">
               <h3 class="num">100</h3>
               <p>Doanh Nghiệp Đồng Hành</p>
