--- a/html/recruitment/recruitment.html
+++ b/html/recruitment/recruitment.html
@@ -115,7 +115,7 @@
     <section class="intro-quote">
       <div class="container">
         <div class="row">
-          <div class="col-sm-12 col-md-6 left mb-5">
+          <div class="col-md-12 col-lg-6 order-md-2 order-lg-1 left mb-5">
             <h2>Never Back Down</h2>
             <p>
               Tuổi trẻ là một vòng xoay mà không phải ai cũng đủ bản lĩnh để rời
@@ -129,9 +129,9 @@
             </p>
             <button type="button" class="btn btn-success"><a href="/html/recruitment/form-recruit.html" target="_blank">ĐĂNG KÝ NGAY</a></button>
           </div>
-          <div class="col-sm-12 col-md-6 right mb-5">
+          <figure class="col-md-12 col-lg-6 order-md-1 order-lg-2 right mb-5 swing">
             <img src="/SeSC/sesc_quote.jpg" alt="SeSC Quote" />
-          </div>
+          </figure>
         </div>
       </div>
     </section>
