--- a/html/recruitment/recruitment.html
+++ b/html/recruitment/recruitment.html
@@ -459,7 +459,7 @@
                               </p>
                             </div>
                           </div>
-                          <div class="row my-3">
+                          <div class="row">
                             <div class="col-2">
                               <i class="fab fa-angellist"></i>
                             </div>
@@ -467,7 +467,7 @@
                               <p>Chuẩn bị nội dung training học thuật cho CLB</p>
                             </div>
                           </div>
-                          <div class="row my-3">
+                          <div class="row">
                             <div class="col-2">
                               <i class="fab fa-angellist"></i>
                             </div>
@@ -495,7 +495,7 @@
                               </p>
                             </div>
                           </div>
-                          <div class="row my-5">
+                          <div class="row">
                             <div class="col-2">
                               <i class="fab fa-angellist"></i>
                             </div>
@@ -503,7 +503,7 @@
                               <p>Có niềm đam mê đối với lĩnh vực Tài chính - Chứng khoán</p>
                             </div>
                           </div>
-                          <div class="row my-5">
+                          <div class="row">
                             <div class="col-2">
                               <i class="fab fa-angellist"></i>
                             </div>
