--- a/html/recruitment/recruitment.html
+++ b/html/recruitment/recruitment.html
@@ -190,7 +190,7 @@
             mình sẽ chia chuyến thám hiểm này thành 3 phần.
           </p>
         </div>
-        <div class="body row">
+        <!-- <div class="body row">
           <div class="left col-7 animate__fadeInUpBig wow animate__animated">
             <img
               class="main-img"
@@ -229,7 +229,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
         <button type="button" class="btn btn-success">
           <a href="/embedded_file/PHỤ LỤC NỘI DUNG FSC 2022.pdf" target="_blank"
             >KHÁM PHÁ BOOKLET</a
