--- a/html/recruitment/recruitment.html
+++ b/html/recruitment/recruitment.html
@@ -190,13 +190,13 @@
             mình sẽ chia chuyến thám hiểm này thành 3 phần.
           </p>
         </div>
-        <!-- <div class="body row">
+        <div class="body row">
           <div class="left col-7 animate__fadeInUpBig wow animate__animated">
-            <img
+            <!-- <img
               class="main-img"
               src="/SeSC/ss3-removebg-preview.png"
               alt="..."
-            />
+            /> -->
             <div class="background"></div>
             <img class="usdt" src="/SeSC/usdt.png" alt="..." />
           </div>
@@ -229,7 +229,7 @@
               </div>
             </div>
           </div>
-        </div> -->
+        </div>
         <button type="button" class="btn btn-success">
           <a href="/embedded_file/PHỤ LỤC NỘI DUNG FSC 2022.pdf" target="_blank"
             >KHÁM PHÁ BOOKLET</a
