--- a/html/aboutUs/about.html
+++ b/html/aboutUs/about.html
@@ -242,7 +242,7 @@
               <div class="card col-sm-12 col-md-6 col-lg-2">
                 <div class="content">
                   <div class="imgBx">
-                      <img src="/SeSC/minh-ngoc.jpg" alt="Minh Ngọc">
+                      <img src="/SeSC/minh-ngoc.JPG" alt="Minh Ngọc">
                   </div>
                   <div class="contentBx">
                       <h4>Minh Ngọc</h4>
