--- a/html/recruitment/form-recruit.html
+++ b/html/recruitment/form-recruit.html
@@ -473,80 +473,45 @@
                     <div class="tab-content" id="v-pills-tabContent">
                       <div class="tab-pane fade" id="v-pills-bcm">
                         <div class="mb-3">
-                            <label for="cauHoiBCM1" class="mb-3">1. Bạn nghĩ như thế nào về nhận định "Chứng khoán là cờ bạc".</label>
+                            <label for="cauHoiBCM1" class="mb-3">1. Xem câu hỏi <a href="/embedded_file/bcm-pdf.pdf" target="_blank" class="tai-day">tại đây</a> và vui lòng điền câu trả lời bằng cách dẫn link google drive</label>
                             <textarea class="form-control" id="cauHoiBCM1" style="height: 100px"></textarea>
                             <div class="noti-error" id="noti-cauHoiBCM1">
-                              <p></p>
-                            </div>
-                        </div>
-                        <div class="mb-3">
-                            <label for="cauHoiBCM2" class="mb-3">2. Bạn nghĩ sao về câu nói “Bull markets are born on pessimism, grow on skepticism, mature on optimism and die on euphoria.” - John Templeton</label>
-                            <textarea class="form-control" id="cauHoiBCM2" style="height: 100px"></textarea>
-                            <div class="noti-error" id="noti-cauHoiBCM2">
                               <p></p>
                             </div>
                         </div>
                       </div>
                       <div class="tab-pane fade" id="v-pills-bdn">
                         <div class="mb-3">
-                            <label for="cauHoiBDN1" class="mb-3">1. Hãy cho biết những tố chất cần có để trở thành 1 thành viên của Ban Đối ngoại? Bạn làm gì để trau dồi các tố chất này?</label>
+                            <label for="cauHoiBDN1" class="mb-3">1. Xem câu hỏi <a href="/embedded_file/bdn-pdf.pdf" target="_blank" class="tai-day">tại đây</a> và vui lòng điền câu trả lời bằng cách dẫn link google drive</label>
                             <textarea class="form-control" id="cauHoiBDN1" style="height: 100px"></textarea>
                             <div class="noti-error" id="noti-cauHoiBDN1">
-                              <p></p>
-                            </div>
-                        </div>
-                        <div class="mb-3">
-                            <label for="cauHoiBDN2" class="mb-3">2. Nếu toàn câu lạc bộ kỳ vọng Ban Đối ngoại phải tìm được 200 triệu tài trợ để lo cho các chi phí của chương trình nhưng Ban chỉ kiếm được 140 triệu thì bạn nghĩ Ban Đối ngoại nên giải quyết như thế nào?</label>
-                            <textarea class="form-control" id="cauHoiBDN2" style="height: 100px"></textarea>
-                            <div class="noti-error" id="noti-cauHoiBDN2">
                               <p></p>
                             </div>
                         </div>
                       </div>
                       <div class="tab-pane fade" id="v-pills-bns">
                         <div class="mb-3">
-                            <label for="cauHoiBNS1" class="mb-3">1. Bạn nghĩ bản thân có yếu tố nào phù hợp với Ban Nhân sự? Là thành viên Ban Nhân sự, bạn sẽ làm gì để những thành viên có tính cách trái ngược nhau làm việc hòa hợp với nhau?</label>
+                            <label for="cauHoiBNS1" class="mb-3">1. Xem câu hỏi <a href="/embedded_file/bns-pdf.pdf" target="_blank" class="tai-day">tại đây</a> và vui lòng điền câu trả lời bằng cách dẫn link google drive</label>
                             <textarea class="form-control" id="cauHoiBNS1" style="height: 100px"></textarea>
                             <div class="noti-error" id="noti-cauHoiBNS1">
-                              <p></p>
-                            </div>
-                        </div>
-                        <div class="mb-3">
-                            <label for="cauHoiBNS2" class="mb-3">2. Bạn nghĩ gì về quan điểm sau: “Nếu như câu lạc bộ của bạn là một chiếc xe, hãy mời những người thích hợp lên xe và những người không thích hợp xuống xe”</label>
-                            <textarea class="form-control" id="cauHoiBNS2" style="height: 100px"></textarea>
-                            <div class="noti-error" id="noti-cauHoiBNS2">
                               <p></p>
                             </div>
                         </div>
                       </div>
                       <div class="tab-pane fade" id="v-pills-btt">
                         <div class="mb-3">
-                            <label for="cauHoiBTT1" class="mb-3">1. Bạn có nhận xét gì về Bộ nhận diện của đợt tuyển nhân sự năm nay? Nếu được thay đổi, bạn sẽ chỉnh sửa những gì?</label>
+                            <label for="cauHoiBTT1" class="mb-3">1. Xem câu hỏi <a href="/embedded_file/btt-pdf.pdf" target="_blank" class="tai-day">tại đây</a> và vui lòng điền câu trả lời bằng cách dẫn link google drive</label>
                             <textarea class="form-control" id="cauHoiBTT1" style="height: 100px"></textarea>
                             <div class="noti-error" id="noti-cauHoiBTT1">
-                              <p></p>
-                            </div>
-                        </div>
-                        <div class="mb-3">
-                            <label for="cauHoiBTT2" class="mb-3">2. Bạn hãy chọn và trả lời 1 trong 2 câu hỏi sau: "Bạn hãy gửi 3 tấm hình tự chụp (hoặc tự design) mà bạn ưng ý nhất và viết content cho 3 tấm hình này" hoặc "Hãy sáng tạo 2 câu thành ngữ, tục ngữ về chủ đề chứng khoán (Ví dụ: Mua mã này, hô mã nọ)"</label>
-                            <textarea class="form-control" id="cauHoiBTT2" style="height: 100px"></textarea>
-                            <div class="noti-error" id="noti-cauHoiBTT2">
                               <p></p>
                             </div>
                         </div>
                       </div>
                       <div class="tab-pane fade" id="v-pills-tcsk">
                         <div class="mb-3">
-                            <label for="cauHoiTCSK1" class="mb-3">1. Theo bạn, Ban Tổ chức sự kiện sẽ thực hiện những công việc gì? Để làm tốt những công việc đó, bạn nghĩ Ban Tổ chức sự kiện sẽ gồm những thành viên có tính cách và tố chất như thế nào?</label>
+                            <label for="cauHoiTCSK1" class="mb-3">1. Xem câu hỏi <a href="/embedded_file/tcsk-pdf.pdf" target="_blank" class="tai-day">tại đây</a> và vui lòng điền câu trả lời bằng cách dẫn link google drive</label>
                             <textarea class="form-control" id="cauHoiTCSK1" style="height: 100px"></textarea>
                             <div class="noti-error" id="noti-cauHoiTCSK1">
-                              <p></p>
-                            </div>
-                        </div>
-                        <div class="mb-3">
-                            <label for="cauHoiTCSK2" class="mb-3">2. Giả sử bạn là thành viên ban Tổ chức sự kiện và bạn đang phải lên kế hoạch cho đêm Gala Night, theo bạn đâu sẽ những tiêu chí để khán giả đánh giá sự chuyên nghiệp của Ban Tổ chức?</label>
-                            <textarea class="form-control" id="cauHoiTCSK2" style="height: 100px"></textarea>
-                            <div class="noti-error" id="noti-cauHoiTCSK2">
                               <p></p>
                             </div>
                         </div>
