--- a/html/recruitment/recruitment.html
+++ b/html/recruitment/recruitment.html
@@ -171,42 +171,31 @@
         <div class="heading">
           <h2>Concept</h2>
           <h3>Tuyển Nhân Sự 2022-2023</h3>
-          <p class="description"></p>
+          <h4 style="color: green; font-weight: 600">MARKET WIZARDS</h4>
         </div>
         <div class="description">
           <p>
-            Chỉ báo Ichimoku là một công cụ tích hợp của việc phân tích kỹ thuật
-            được giới thiệu vào năm 1968, bởi người sáng lập là Hosoda Goichi. Ý
-            tưởng hệ thống này là khả năng nhận biết nhanh chóng việc hiểu trạng
-            thái xu hướng, sự chuyển động giá, và có tất cả 5 nhân tố của hệ
-            thống kết hợp với sự chuyển động giá, với quan điểm đặc tính chu kỳ
-            của các mối liên hệ, với điều kiện chuyển động nhóm của hành vi con
-            người.
+            Mỗi một bạn K61 là một phù thủy tập sự. Trước khi tìm được một “ngôi nhà chung” thích hợp, thuộc về bản thân, thì mỗi người sẽ có một khoảng thời gian tìm hiểu, làm quen và tiếp xúc với các “ngôi nhà chung” của xứ sở FTU2, và <span class="highlightText">Nhà Xanh</span> là một trong số những lựa chọn. Các bạn K61 với những năng lực riêng, sẽ chính thức trở thành một phần của <span class="highlightText">Nhà Xanh</span>, một thành viên của một ngôi nhà nhỏ trong đại gia đình lớn sau chuỗi thời gian tập sự, trải qua những bài thử thách khác nhau để chứng minh khả năng, sự phù hợp của mình với “ngôi nhà chung” này.
           </p>
           <p>
-            Giả định K61 là một nhà du hành thám hiểm đang bay giữa bầu trời
-            trên hành trình của mình và trước mặt nhà thám hiểm là một cơn bão
-            dữ dội. Tương tự với <span id="ichimoku">“Ichimoku Cloud”</span>,
-            mình sẽ chia chuyến thám hiểm này thành 3 phần.
+            Đại gia đình <span class="highlightText">Nhà Xanh</span> gồm 5 ngôi nhà nhỏ, tương ứng với từng khả năng, phép thuật riêng. Đứng đầu mỗi nhà là các vị trưởng lão và trên hết, đứng đầu Nhà Xanh, trực tiếp quản lý, điều hành,  kết nối 5 ngôi nhà kia chính là ba vị trưởng lão tối cao, là trái tim kết nối mọi người. Đầu tiên là nhà <span style="color: #03a54c; font-weight: 600;">“Chuyên môn”</span>, đầu não tri thức, trực tiếp quản lý và xào nấu những kiến thức tài chính thành bữa ăn chính, bữa ăn tinh thần cho cả nhà. Thứ hai là nhà <span style="color:cadetblue;font-weight: 600">“Đối ngoại”</span>, với khả năng giao tiếp lưu loát luôn đem về những món ăn tài chính chất lượng, là nhà cung cấp tài chính chính cho cả Nhà Xanh. Thứ ba là nhà <span style="color:darkorchid;font-weight: 600">“Tổ chức sự kiện”</span>, những nhà quản lý thời gian tài ba, khả năng sắp xếp, tổ chức đỉnh cao thượng thừa. Tiếp theo là nhà <span style="color:darkgoldenrod;font-weight: 600">“Truyền thông”</span> với bàn tay vàng, chuyên biến hóa những ý tưởng thành những bài đăng, design với cá tính riêng, thể hiện màu sắc riêng của mình, có sức hút lớn với người xem. Và cuối cùng là nhà <span style="color:hotpink;font-weight: 600">“Nhân sự”</span>, với năng lượng tràn đầy luôn điều hòa không khí, kết nối mọi người với nhau bằng những buổi tiệc nhỏ, là những phù thủy với bàn tay phép cái gì cũng có thể làm.
           </p>
         </div>
         <div class="body row">
-          <div class="left col-7 animate__fadeInUpBig wow animate__animated">
-            <!-- <img
+          <div class="left col-12 col-md-7 animate__fadeInUpBig wow animate__animated">
+            <img
               class="main-img"
-              src="/SeSC/ss3-removebg-preview.png"
+              src="/SeSC/img-tns.png"
               alt="..."
-            /> -->
-            <div class="background"></div>
-            <img class="usdt" src="/SeSC/usdt.png" alt="..." />
+            />
           </div>
-          <div class="right col-5">
+          <div class="right col-12 col-md-5">
             <div
               class="item d-flex item1 wow animate__animated animate__fadeInRight"
             >
               <div class="order"><span>1</span></div>
               <div class="content">
-                <h2>Weather The Storm</h2>
+                <h2>SPIRITUAL KEY</h2>
                 <p>Vòng Đơn Online</p>
               </div>
             </div>
@@ -215,7 +204,7 @@
             >
               <div class="order"><span>2</span></div>
               <div class="content">
-                <h2>Into The Eyes</h2>
+                <h2>ALOHOMORA</h2>
                 <p>Vòng Teamwork</p>
               </div>
             </div>
@@ -224,7 +213,7 @@
             >
               <div class="order"><span>3</span></div>
               <div class="content">
-                <h2>On Cloud Nine</h2>
+                <h2>TRIUMPH HALLOWS</h2>
                 <p>Vòng phỏng vấn cá nhân</p>
               </div>
             </div>
@@ -240,8 +229,8 @@
     <section class="count-timer">
       <div class="container">
         <div class="heading">
-          <h2>Countdown To A</h2>
-          <p>Phải A</p>
+          <h2>Thời Gian Điền Form Vòng 1 Còn Lại</h2>
+          <p>Form sẽ đóng vào lúc 23:59:00 ngày 14/11/2022</p>
         </div>
         <div class="clock">
           <div class="row">
