--- a/html/contact/contact.html
+++ b/html/contact/contact.html
@@ -76,14 +76,11 @@
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="/html/aboutUs/about.html"
-                    >VỀ SeSC</a
+                    >VỀ SESC</a
                   >
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="/html/fsc/fsc.html">FSC</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="/html/blog/blog.html">BLOG</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="/html/recruitment/recruitment.html"
