--- a/html/fsc/fsc.html
+++ b/html/fsc/fsc.html
@@ -76,15 +76,15 @@
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="/html/aboutUs/about.html"
-                    >VỀ SeSC</a
+                    >VỀ SESC</a
                   >
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="/html/fsc/fsc.html">FSC</a>
                 </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                   <a class="nav-link" href="/html/blog/blog.html">BLOG</a>
-                </li>
+                </li> -->
                 <li class="nav-item">
                   <a class="nav-link" href="/html/recruitment/recruitment.html"
                     >TUYỂN NHÂN SỰ</a
@@ -109,8 +109,8 @@
     </section>
     <!--------Introduction----------------->
     <section class="FSC">
-      <h1>Financial Student Contest</h1>
-      <p>Financial Student Contest is organized annually by SeSC Finance - Securities Club with the goal of bringing together students with igniting passion for Finance<br> from all over the country to compete with each other to find the ultimate champions</p>
+      <h1>Cuộc thi Sinh viên với Tài chính</h1>
+      <p>Cuộc thi Sinh viên với Tài chính FSC được tổ chức hàng năm bởi CLB Tài chính - Chứng khoán SeSC với mục tiêu tạo ra một sân chơi học thuật đầy cảm hứng và thực tế dành cho các sinh viên có đam mê với ngành Tài chính từ khắp cả nước, hứa hẹn mỗi năm sẽ mang đến những cuộc tranh tài nảy lửa đầy hấp dẫn để tìm ra đội chiến thắng cuối cùng.</p>
       <div class="col">
         <div class="FSC-col">
           <img src="/SeSC/FSC2022.jpg">
@@ -154,7 +154,7 @@
     <footer class="footer">
       <div class="container">
         <h4>CLB Tài chính - Chứng khoán SeSC</h4>
-        <p>Thành lập vào ngày 01/04/2010, CLB Tài chính - Chứng khoán SeSC là CLB đầu tiên và duy nhất của ĐH Ngoại Thương TPHCM hoạt động trong lĩnh vực Tài chính - Chứng khoán. Với sứ mệnh phổ cập tri thức tài chính cho cộng đồng, Chúng Tôi cam kết không ngừng nâng cao chất lượng hoạt động, tiếp tục là bệ phóng cho các tài năng trong lĩnh vực Tài chính - Chứng khoán trong nhiều năm nữa.</p>
+        <p>Thành lập vào ngày 01/04/2010, CLB Tài chính - Chứng khoán SeSC là CLB đầu tiên và duy nhất của ĐH Ngoại Thương TPHCM hoạt động trong lĩnh vực Tài chính - Chứng khoán. Với sứ mệnh phổ cập tri thức tài chính cho cộng đồng, chúng tôi cam kết không ngừng nâng cao chất lượng hoạt động, tiếp tục là bệ phóng cho các tài năng trong lĩnh vực Tài chính - Chứng khoán trong nhiều năm nữa.</p>
         <div class="icons">
           <a href="https://www.facebook.com/CaulacboChungKhoanSeSC" target="_blank"><i class="fab fa-facebook"></i></a>
           <a href="https://www.linkedin.com/company/sesc-ftu2/mycompany/" target="_blank"><i class="fab fa-linkedin"></i></a>
