--- a/html/home/index.html
+++ b/html/home/index.html
@@ -1,154 +1,157 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Securities Studying Club - Never Back Down</title>
-  
-  <!-- gg fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap" rel="stylesheet">
+  <head>
+    <title>CLB Tài chính - Chứng khoán SeSC</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
-  <!-- css files -->
-  <link rel="stylesheet" href="/style/home/style.css">
+    <!-- Bootstrap CSS v5.2.0-beta1 -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      crossorigin="anonymous"
+    />
 
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XE0JP45WDF"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-XE0JP45WDF');
-  </script>
-</head>
-<body>
-<div id="preloader"></div>
-<section class ="header">
-  <nav>
-    <a href="index.html"><img src="/SeSC/Logo_small_trans.png" target="_blank"></a>
-    <div class="nav-links" id="navLinks">
-      <ion-icon class="fa fa-times" name="close-outline" onclick="hideMenu()"></ion-icon>
-      <ul>
-        <li class="nav"><a href="../home/index.html">HOME</a></li>
-        <li class="nav"><a href="../aboutUs/about.html">ABOUT US</a></li>
-        <li class="nav"><a href="../fsc/fsc.html">FSC</a></li>
-        <li class="nav"><a href="../blog/blog.html">BLOG</a></li>
-        <li class="nav"><a href="../recruitment/recruitment.html">RECRUITMENT</a></li> 
-        <li class="nav"><a href="../contact/contact.html">CONTACT</a></li>   
-      </ul>      
-    </div>
-    <ion-icon class="fa fa-bars" name="menu-outline" onclick="showMenu()"></ion-icon>
-  </nav>
-  <div class="text-box">
-    <h1>Securities Studying Club</h1>
-    <p>Knowing how to invest has become so important now than ever before to reach financial independence and more importantly,<br> to be able to not lose what you have worked so hard for.</p>
-    <a href="https://www.facebook.com/CaulacboChungKhoanSeSC" class="hero-btn" target="_blank">Visit us to know more</a>
-  </div>
-</section>
-<!--------Next Section----------------->
-<section class ="training">
-  <h1>Our training sessions</h1>
-  <p>Internal training</p>
-  <div class="row">
-    <div class="training-col">
-      <h3>Finance</h3>
-      <p>Provide knowledge about the Financial industry, focusing on building a critical and open mindset for trainees.</p>
-    </div>
-    <div class="training-col">
-      <h3>Security</h3>
-      <p>Basic view over the stock market, how to read and interpret charts and various indicators. These training sessions also ensures the understanding of various types of assets.</p>
-    </div>
-    <div class="training-col">
-      <h3>Career Orientation</h3>
-      <p>Sharing about different fields in the financial industry including securities analyst, financial consultant, audit, etc. from former club memebers.</p>
-    </div>   
-  </div>
-</section>
-<!--------Next Section--------------->
-<section class="FSC">
-  <h1>Financial Student Contest</h1>
-  <p>Financial Student Contest is organized annually by SeSC Finance - Securities Club with the goal of bringing together students with igniting passion for Finance<br> from all over the country to compete with each other to find the ultimate champions</p>
-  <div class="col">
-    <div class="FSC-col">
-      <img src="/SeSC/FSC2022.jpg">
-      <div class="layer">
-        <h3>FSC 10</h3>
+    <!-- gg fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700&family=Montserrat:wght@400;500;600;700&family=Pacifico&family=Quicksand:wght@300;400;600;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- font awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+      integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+
+    <link rel="shortcut icon" type="image/png" href="/SeSC/LogoSeSC.png"/>
+
+    <!-- css files -->
+    <link rel="stylesheet" href="/style/home/style_home.css">
+  </head>
+  <body>
+    <section class ="header">
+      <nav>
+        <a href="index.html"><img src="/SeSC/Logo_small_trans.png" target="_blank"></a>
+        <div class="nav-links" id="navLinks">
+          <ion-icon class="fa fa-times" name="close-outline" onclick="hideMenu()"></ion-icon>
+          <ul>
+            <li class="nav"><a href="../home/index.html">TRANG CHỦ</a></li>
+            <li class="nav"><a href="../aboutUs/about.html">VỀ SESC</a></li>
+            <li class="nav"><a href="../fsc/fsc.html">FSC</a></li>
+            <!---<li class="nav"><a href="../blog/blog.html">BLOG</a></li>--->
+            <li class="nav"><a href="../recruitment/recruitment.html">TUYỂN NHÂN SỰ</a></li> 
+            <li class="nav"><a href="../contact/contact.html">LIÊN HỆ</a></li>   
+          </ul>      
+        </div>
+        <ion-icon class="fa fa-bars" name="menu-outline" onclick="showMenu()"></ion-icon>
+      </nav>
+      <div class="text-box">
+        <h1>CLB Tài chính - Chứng khoán SeSC</h1>
+        <p>Never Back Down</p>
+        <a href="https://www.facebook.com/CaulacboChungKhoanSeSC" class="hero-btn" target="_blank">Tìm hiểu thêm</a>
       </div>
-    </div>
-    <div class="FSC-col">
-      <img src="/SeSC/FSC2021.jpg">
-      <div class="layer">
-        <h3>FSC 9</h3>
+    </section>
+    <!--------Next Section----------------->
+    <section class ="training">
+      <h1>Các buổi training</h1>
+      <p>Training nội bộ</p>
+      <div class="row">
+        <div class="training-col">
+          <h3>Tài chính</h3>
+          <p>Cung cấp kiến thức về ngành tài chính, chú trọng trau dồi những kỹ năng quan trọng trong ngành như khả năng tư duy, khả năng phân tích,...</p>
+        </div>
+        <div class="training-col">
+          <h3>Chứng khoán</h3>
+          <p>Bước đầu học và làm quen với chứng khoán, thực hành thực tế trên thị trường, các đọc hiểu các biểu đồ và chỉ bảo đồng thời trang bị cho các thành viên đầy đủ những kiến thức về các loại tài sản khác nhau.</p>
+        </div>
+        <div class="training-col">
+          <h3>Định hướng nghề nghiệp</h3>
+          <p>Những buổi sharing từ các anh chị đi trước, cựu thành viên và những khách mời danh tiếng về nhiều lĩnh vực khác nhau trong ngành tài chính như Public Equity, M&A, Corporate Finance, Audit,...</p>
+        </div>   
       </div>
-    </div>
-    <div class="FSC-col">
-      <img src="/SeSC/FSC2020.jpg">
-      <div class="layer">
-        <h3>FSC 8</h3>
+    </section>
+    <!--------Next Section--------------->
+    <section class="FSC">
+      <h1>Cuộc thi Sinh viên với Tài chính</h1>
+      <p>Cuộc thi Sinh viên với Tài chính FSC được tổ chức hàng năm bởi CLB Tài chính - Chứng khoán SeSC với mục tiêu tạo ra một sân chơi học thuật đầy cảm hứng và thực tế dành cho các sinh viên có đam mê với ngành Tài chính từ khắp cả nước, hứa hẹn mỗi năm sẽ mang đến những cuộc tranh tài nảy lửa đầy hấp dẫn để tìm ra đội chiến thắng cuối cùng.</p>
+      <div class="col">
+        <div class="FSC-col">
+          <img src="/SeSC/FSC2022.jpg">
+          <div class="layer">
+            <h3>FSC 10</h3>
+          </div>
+        </div>
+        <div class="FSC-col">
+          <img src="/SeSC/FSC2021.jpg">
+          <div class="layer">
+            <h3>FSC 9</h3>
+          </div>
+        </div>
+        <div class="FSC-col">
+          <img src="/SeSC/FSC2020.jpg">
+          <div class="layer">
+            <h3>FSC 8</h3>
+          </div>
+        </div>
       </div>
-    </div>
-  </div>
-</section>
-<!--------Next Section--------------->
-<section class="department">
-  <h1>Our departments</h1>
-  <p>Working in perfect sync with each other</p>
-  <div class="row">
-    <div class="department-col">
-      <img src="/SeSC/BCM.jpg">
-      <h3>Research and Development</h3>
-    </div>
-    <div class="department-col">
-      <img src="/SeSC/TCSK.jpg">
-      <h3>Event</h3>
-    </div>
-    <div class="department-col">
-      <img src="/SeSC/BTT.jpg">
-      <h3>Media</h3>
-    </div>
-    <div class="department-col">
-      <img src="/SeSC/BĐN.jpg">
-      <h3>External Relation</h3>
-    </div>
-    <div class="department-col">
-      <img src="/SeSC/BNS.jpg">
-      <h3>Human Resource</h3>
-    </div>
-  </div>
-</section>
-<!--------Next Section--------------->
-<section class="cta">
-    <h1>Come find us for more!</h1>
-    <a href="https://www.facebook.com/CaulacboChungKhoanSeSC" class="hero-btn" target="_blank">CONTACT</a>
-</section>
-<!--------Next Section--------------->
-<section class="footer">
-  <h4>About Us</h4>
-  <p>Established on April 1, 2010, SeSC (Securities Studying Club) is currently the only club at FTU2 operating in the field of finance and securities.<br> This is an environment for students with the same passion to learn and share knowledge with each other.</p>
-  <div class="icons">
-    <a href="https://www.facebook.com/CaulacboChungKhoanSeSC" target="_blank"><ion-icon class="fa" name="logo-facebook"></ion-icon></a>
-    <a href="https://www.linkedin.com/company/sesc-ftu2/mycompany/" target="_blank"><ion-icon class="fa" name="logo-linkedin"></ion-icon></a>
-    <a href="https://www.tiktok.com/@fsc.10" target="_blank"><ion-icon class="fa" name="logo-tiktok"></ion-icon></a></ion-icon>
-  </div>
-  <p>Powered by  <ion-icon class="fa" name="heart-outline"></ion-icon>  from SeSC</p>
-</section>
-<!--------Javacrpt for Toggle Mobile Menu------->
-  <script>
-    var navLinks = document.getElementById("navLinks")
-    function showMenu(){navLinks.style.right="0";}
-    function hideMenu(){navLinks.style.right="-200px";}
-  </script>
-  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-  <script>
-    window.addEventListener("load", function(){
-    setInterval(pippo, 1000)});
-    function pippo(){
-      var preloader = document.getElementById("preloader");
-      document.body.removeChild(preloader);
-    }
-  </script>
-</body>
+    </section>
+    <!--------Next Section--------------->
+    <section class="department">
+      <h1>Các ban chức năng</h1>
+      <p> </p>
+      <div class="row">
+        <div class="department-col">
+          <img src="/SeSC/BCM.jpg">
+          <h3>Ban Chuyên Môn</h3>
+        </div>
+        <div class="department-col">
+          <img src="/SeSC/TCSK.jpg">
+          <h3>Ban Tổ Chức Sự Kiện</h3>
+        </div>
+        <div class="department-col">
+          <img src="/SeSC/BTT.jpg">
+          <h3>Ban Truyền Thông</h3>
+        </div>
+        <div class="department-col">
+          <img src="/SeSC/BĐN.jpg">
+          <h3>Ban Đối Ngoại</h3>
+        </div>
+        <div class="department-col">
+          <img src="/SeSC/BNS.jpg">
+          <h3>Ban Nhân Sự</h3>
+        </div>
+      </div>
+    </section>
+    <!--------Next Section--------------->
+    <section class="cta">
+        <h1>Tìm hiểu ngay!</h1>
+        <a href="https://www.facebook.com/CaulacboChungKhoanSeSC" class="hero-btn" target="_blank">LIÊN HỆ</a>
+    </section>
+    <!--------Next Section--------------->
+    <footer class="footer">
+      <div class="container">
+        <h4>CLB Tài chính - Chứng khoán SeSC</h4>
+        <p>Thành lập vào ngày 01/04/2010, CLB Tài chính - Chứng khoán SeSC là CLB đầu tiên và duy nhất của ĐH Ngoại Thương TPHCM hoạt động trong lĩnh vực Tài chính - Chứng khoán. Với sứ mệnh phổ cập tri thức tài chính cho cộng đồng, chúng tôi cam kết không ngừng nâng cao chất lượng hoạt động, tiếp tục là bệ phóng cho các tài năng trong lĩnh vực Tài chính - Chứng khoán trong nhiều năm nữa.</p>
+        <div class="icons">
+          <a href="https://www.facebook.com/CaulacboChungKhoanSeSC" target="_blank"><i class="fab fa-facebook"></i></a>
+          <a href="https://www.linkedin.com/company/sesc-ftu2/mycompany/" target="_blank"><i class="fab fa-linkedin"></i></a>
+          <a href="https://www.tiktok.com/@fsc.10" target="_blank"><i class="fa-brands fa-tiktok"></i></a></ion-icon>
+        </div>
+        <p>Powered by  <i class="fa fa-heart"></i>  from SeSC</p>
+      </div>
+    </footer>
+  </body>
 </html>
 
 
