--- a/html/home/index.html
+++ b/html/home/index.html
@@ -47,9 +47,8 @@
           <ion-icon class="fa fa-times" name="close-outline" onclick="hideMenu()"></ion-icon>
           <ul>
             <li class="nav"><a href="../home/index.html">TRANG CHỦ</a></li>
-            <li class="nav"><a href="../aboutUs/about.html">VỀ SESC</a></li>
+            <li class="nav"><a href="../aboutUs/about.html">VỀ SeSC</a></li>
             <li class="nav"><a href="../fsc/fsc.html">FSC</a></li>
-            <!---<li class="nav"><a href="../blog/blog.html">BLOG</a></li>--->
             <li class="nav"><a href="../recruitment/recruitment.html">TUYỂN NHÂN SỰ</a></li> 
             <li class="nav"><a href="../contact/contact.html">LIÊN HỆ</a></li>   
           </ul>      
