--- a/html/recruitment/form-recruit.html
+++ b/html/recruitment/form-recruit.html
@@ -74,7 +74,7 @@
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="/html/aboutUs/about.html"
-                    >VỀ SESC</a
+                    >VỀ SeSC</a
                   >
                 </li>
                 <li class="nav-item">
@@ -528,7 +528,7 @@
     <footer class="footer">
       <div class="container">
         <h4>CLB Tài chính - Chứng khoán SeSC</h4>
-        <p>Thành lập vào ngày 01/04/2010, CLB Tài chính - Chứng khoán SeSC là CLB đầu tiên và duy nhất của ĐH Ngoại Thương TPHCM hoạt động trong lĩnh vực Tài chính - Chứng khoán. Với sứ mệnh phổ cập tri thức tài chính cho cộng đồng, Chúng Tôi cam kết không ngừng nâng cao chất lượng hoạt động, tiếp tục là bệ phóng cho các tài năng trong lĩnh vực Tài chính - Chứng khoán trong nhiều năm nữa.</p>
+        <p>Thành lập vào ngày 01/04/2010, CLB Tài chính - Chứng khoán SeSC là CLB đầu tiên và duy nhất của ĐH Ngoại Thương TPHCM hoạt động trong lĩnh vực Tài chính - Chứng khoán. Với sứ mệnh phổ cập tri thức tài chính cho cộng đồng, chúng tôi cam kết không ngừng nâng cao chất lượng hoạt động, tiếp tục là bệ phóng cho các tài năng trong lĩnh vực Tài chính - Chứng khoán trong nhiều năm nữa.</p>
         <div class="icons">
           <a href="https://www.facebook.com/CaulacboChungKhoanSeSC" target="_blank"><i class="fab fa-facebook"></i></a>
           <a href="https://www.linkedin.com/company/sesc-ftu2/mycompany/" target="_blank"><i class="fab fa-linkedin"></i></a>
