--- a/html/recruitment/recruitment.html
+++ b/html/recruitment/recruitment.html
@@ -81,7 +81,7 @@
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="/html/aboutUs/about.html"
-                    >VỀ SESC</a
+                    >VỀ SeSC</a
                   >
                 </li>
                 <li class="nav-item">
@@ -115,19 +115,12 @@
           <div class="col-md-12 col-lg-6 order-2 order-lg-1 left mb-5">
             <h2>Never Back Down</h2>
             <p>
-              Tuổi trẻ là một vòng xoay mà không phải ai cũng đủ bản lĩnh để rời
-              khỏi bề mặt bằng phẳng. Em sẽ để thanh xuân mình mãi là một vòng
-              tròn khép kín hay chọn bứt phá khỏi sự nhàm chán của những vòng
-              lặp và tiến lên tới một em mới mẻ, trọn vẹn hơn? Hãy để
-              <span class="highlight-text">SeSC</span> đi cùng em trong hành
-              trình bứt phá, hoàn thiện và phát triển –
-              <span class="highlight-text">Out the Cycle, Up the Spiral.</span>
-              Sự lựa chọn nằm ở em!
+              <span class="highlight-text">CLB Chứng Khoán SeSC</span> là một ngôi nhà, không phải được xây bằng gạch mà bằng tình cảm, được cũng cố bằng sự thấu hiểu, yêu thương mà các thành viên dần tích lũy đươc qua thời gian làm việc, trải nghiệm và vấp ngã để đứng dậy và trưởng thành hơn cùng nhau ngay dưới mái nhà này. SeSC còn là đòn bẩy tốt nhất để có thể gặt hái được những thành tựu trên con đường sự nghiệp sau này. <span class="highlight-text">Nếu phải miêu tả quãng thời gian đại học của mình trong một từ đó chắc chắn sẽ là SeSC</span> 💚
             </p>
             <button type="button" class="btn btn-success"><a href="/html/recruitment/form-recruit.html" target="_blank">ĐĂNG KÝ NGAY</a></button>
           </div>
           <figure class="col-md-12 col-lg-6 order-1 order-lg-2 right mb-5 swing">
-            <img src="/SeSC/sesc_quote.jpg" alt="SeSC Quote" />
+            <img src="/SeSC/SeSC_quote.jpg" alt="SeSC Quote" />
           </figure>
         </div>
       </div>
@@ -1558,10 +1551,10 @@
     <footer class="footer">
       <div class="container">
         <h4>CLB Tài chính - Chứng khoán SeSC</h4>
-        <p>Thành lập vào ngày 01/04/2010, CLB Tài chính - Chứng khoán SeSC là CLB đầu tiên và duy nhất của ĐH Ngoại Thương TPHCM hoạt động trong lĩnh vực Tài chính - Chứng khoán. Với sứ mệnh phổ cập tri thức tài chính cho cộng đồng, Chúng Tôi cam kết không ngừng nâng cao chất lượng hoạt động, tiếp tục là bệ phóng cho các tài năng trong lĩnh vực Tài chính - Chứng khoán trong nhiều năm nữa.</p>
+        <p>Thành lập vào ngày 01/04/2010, CLB Tài chính - Chứng khoán SeSC là CLB đầu tiên và duy nhất của ĐH Ngoại Thương TPHCM hoạt động trong lĩnh vực Tài chính - Chứng khoán. Với sứ mệnh phổ cập tri thức tài chính cho cộng đồng, chúng tôi cam kết không ngừng nâng cao chất lượng hoạt động, tiếp tục là bệ phóng cho các tài năng trong lĩnh vực Tài chính - Chứng khoán trong nhiều năm nữa.</p>
         <div class="icons">
           <a href="https://www.facebook.com/CaulacboChungKhoanSeSC" target="_blank"><i class="fab fa-facebook"></i></a>
-          <a href="https://www.linkedin.com/company/sesc-ftu2/mycompany/" target="_blank"><i class="fab fa-linkedin"></i></a>
+          <a href="https://www.linkedin.com/company/SeSC-ftu2/mycompany/" target="_blank"><i class="fab fa-linkedin"></i></a>
           <a href="https://www.tiktok.com/@fsc.10" target="_blank"><i class="fa-brands fa-tiktok"></i></a></ion-icon>
         </div>
         <p>Powered by  <i class="fa fa-heart"></i>  from SeSC</p>
