--- a/html/fsc/fsc.html
+++ b/html/fsc/fsc.html
@@ -76,7 +76,7 @@
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="/html/aboutUs/about.html"
-                    >VỀ SESC</a
+                    >VỀ SeSC</a
                   >
                 </li>
                 <li class="nav-item">
