--- a/test.html
+++ b/test.html
@@ -28,7 +28,7 @@
     <link rel="stylesheet" href="/test.css" />
   </head>
   <body>
-    <div class="container">
+    <div class="container coreteam">
       <div class="wrap">
         <div class="girl">
           <div class="description mb-4">
@@ -153,7 +153,7 @@
           <div class="item">
             <div
               class="img"
-              style="background-image: url('/SeSC/dinh-adjusted.jpg"
+              style="background-image: url('/SeSC/dinh-chinh-2.jpg"
             >
               <div class="description">
                 <h2>Long Đỉnh</h2>
@@ -355,6 +355,201 @@
         </div>
       </div>
     </div>
+    <div class="container timeline-projects mt-5">
+      <h1 class="project-name text-center">RESPONSIVE TIMELINE</h1>
+      <div id="timeline">
+        <div class="timeline-item">
+          <div class="timeline-icon">
+            <svg
+              version="1.1"
+              id="Layer_1"
+              xmlns="http://www.w3.org/2000/svg"
+              xmlns:xlink="http://www.w3.org/1999/xlink"
+              x="0px"
+              y="0px"
+              width="21px"
+              height="20px"
+              viewBox="0 0 21 20"
+              enable-background="new 0 0 21 20"
+              xml:space="preserve"
+            >
+              <path
+                fill="#FFFFFF"
+                d="M19.998,6.766l-5.759-0.544c-0.362-0.032-0.676-0.264-0.822-0.61l-2.064-4.999
+        c-0.329-0.825-1.5-0.825-1.83,0L7.476,5.611c-0.132,0.346-0.462,0.578-0.824,0.61L0.894,6.766C0.035,6.848-0.312,7.921,0.333,8.499
+        l4.338,3.811c0.279,0.246,0.395,0.609,0.314,0.975l-1.304,5.345c-0.199,0.842,0.708,1.534,1.468,1.089l4.801-2.822
+        c0.313-0.181,0.695-0.181,1.006,0l4.803,2.822c0.759,0.445,1.666-0.23,1.468-1.089l-1.288-5.345
+        c-0.081-0.365,0.035-0.729,0.313-0.975l4.34-3.811C21.219,7.921,20.855,6.848,19.998,6.766z"
+              />
+            </svg>
+          </div>
+          <div class="timeline-content">
+            <h2>HỘI THẢO ĐẦU NĂM</h2>
+            <div class="description-text">
+              <p>
+                Là sự kiện học thuật đầu tiên được tổ chức trong mỗi nhiệm kỳ,
+                Hội thảo Đầu năm là nơi các tân sinh viên có cho mình những tiếp
+                xúc đầu tiên với lĩnh vực Tài chính - Chứng khoán.
+              </p>
+              <p>
+                Hằng năm, Hội thảo Đầu năm đón tiếp rất nhiều lượt ghé thăm của
+                các bạn tân sinh viên và là diễn đàn uy tín với sự góp mặt của
+                các diễn giả kinh nghiệm trong ngành.
+              </p>
+            </div>
+            <a href="#" class="btn">Khám Phá Ngay</a>
+          </div>
+        </div>
+
+        <div class="timeline-item">
+          <div class="timeline-icon">
+            <svg
+              version="1.1"
+              id="Layer_1"
+              xmlns="http://www.w3.org/2000/svg"
+              xmlns:xlink="http://www.w3.org/1999/xlink"
+              x="0px"
+              y="0px"
+              width="21px"
+              height="20px"
+              viewBox="0 0 21 20"
+              enable-background="new 0 0 21 20"
+              xml:space="preserve"
+            >
+              <g>
+                <path
+                  fill="#FFFFFF"
+                  d="M17.92,3.065l-1.669-2.302c-0.336-0.464-0.87-0.75-1.479-0.755C14.732,0.008,7.653,0,7.653,0v5.6
+            c0,0.096-0.047,0.185-0.127,0.237c-0.081,0.052-0.181,0.06-0.268,0.02l-1.413-0.64C5.773,5.183,5.69,5.183,5.617,5.215l-1.489,0.65
+            c-0.087,0.038-0.19,0.029-0.271-0.023c-0.079-0.052-0.13-0.141-0.13-0.235V0H2.191C1.655,0,1.233,0.434,1.233,0.97
+            c0,0,0.025,15.952,0.031,15.993c0.084,0.509,0.379,0.962,0.811,1.242l2.334,1.528C4.671,19.905,4.974,20,5.286,20h10.307
+            c1.452,0,2.634-1.189,2.634-2.64V4.007C18.227,3.666,18.12,3.339,17.92,3.065z M16.42,17.36c0,0.464-0.361,0.833-0.827,0.833H5.341
+            l-1.675-1.089h10.341c0.537,0,0.953-0.44,0.953-0.979V2.039l1.459,2.027V17.36L16.42,17.36z"
+                />
+              </g>
+            </svg>
+          </div>
+          <div class="timeline-content right">
+            <h2>TRAINING NỘI BỘ</h2>
+            <div class="description-text">
+              <p>
+                Bên cạnh sứ mệnh nâng cao tri thức tài chính cho cộng đồng, CLB
+                SeSC còn tự hào là bệ phóng cho những tài năng trong lĩnh vực
+                tài chính - chứng khoán bước ra ánh sáng.
+              </p>
+              <p>
+                Hằng năm, những thành viên của CLB, đặc biệt là các tân SeSCers,
+                sẽ có cơ hội tham gia những buổi training từ cơ bản đến chuyên
+                sâu về lĩnh vực tài chính - chứng khoán, với những diễn giả là
+                những cựu thành viên cực kì tài năng của chính CLB.
+              </p>
+            </div>
+            <a href="#" class="btn">từ từ hãy KHÁM PHÁ</a>
+          </div>
+        </div>
+
+        <div class="timeline-item">
+          <div class="timeline-icon">
+            <svg
+              version="1.1"
+              id="Layer_1"
+              xmlns="http://www.w3.org/2000/svg"
+              xmlns:xlink="http://www.w3.org/1999/xlink"
+              x="0px"
+              y="0px"
+              width="21px"
+              height="20px"
+              viewBox="0 0 21 20"
+              enable-background="new 0 0 21 20"
+              xml:space="preserve"
+            >
+              <path
+                fill="#FFFFFF"
+                d="M19.998,6.766l-5.759-0.544c-0.362-0.032-0.676-0.264-0.822-0.61l-2.064-4.999
+        c-0.329-0.825-1.5-0.825-1.83,0L7.476,5.611c-0.132,0.346-0.462,0.578-0.824,0.61L0.894,6.766C0.035,6.848-0.312,7.921,0.333,8.499
+        l4.338,3.811c0.279,0.246,0.395,0.609,0.314,0.975l-1.304,5.345c-0.199,0.842,0.708,1.534,1.468,1.089l4.801-2.822
+        c0.313-0.181,0.695-0.181,1.006,0l4.803,2.822c0.759,0.445,1.666-0.23,1.468-1.089l-1.288-5.345
+        c-0.081-0.365,0.035-0.729,0.313-0.975l4.34-3.811C21.219,7.921,20.855,6.848,19.998,6.766z"
+              />
+            </svg>
+          </div>
+          <div class="timeline-content">
+            <h2>CUỘC THI "ANH TÀI CHỨNG KHOÁN"</h2>
+            <div class="description-text">
+              <p>
+                Là cuộc thi nội bộ của CLB SeSC, cuộc thi "Anh Tài Chứng Khoán"
+                được tổ chức nhằm tạo ra một sân chơi lành mạnh cho các thành
+                viên tranh tài với nhau về các kiến thức về đầu tư.
+              </p>
+              <p>
+                Xuyên suốt cuộc thi, các thành viên sẽ được trải nghiệm thực tế
+                các hoạt động đầu tư trên sàn chứng khoán thật và cùng nhau tham
+                gia hoàn thành một bài báo cáo phân tích một mã cổ phiếu theo
+                đúng các tiêu chuẩn của ngành.
+              </p>
+            </div>
+            <a href="#" class="btn">TỪ TỪ HÃY KHÁM PHÁ</a>
+          </div>
+        </div>
+
+        <div class="timeline-item">
+          <div class="timeline-icon">
+            <svg
+              version="1.1"
+              id="Layer_1"
+              xmlns="http://www.w3.org/2000/svg"
+              xmlns:xlink="http://www.w3.org/1999/xlink"
+              x="0px"
+              y="0px"
+              width="21px"
+              height="20px"
+              viewBox="0 0 21 20"
+              enable-background="new 0 0 21 20"
+              xml:space="preserve"
+            >
+              <path
+                fill="#FFFFFF"
+                d="M19.998,6.766l-5.759-0.544c-0.362-0.032-0.676-0.264-0.822-0.61l-2.064-4.999
+          c-0.329-0.825-1.5-0.825-1.83,0L7.476,5.611c-0.132,0.346-0.462,0.578-0.824,0.61L0.894,6.766C0.035,6.848-0.312,7.921,0.333,8.499
+          l4.338,3.811c0.279,0.246,0.395,0.609,0.314,0.975l-1.304,5.345c-0.199,0.842,0.708,1.534,1.468,1.089l4.801-2.822
+          c0.313-0.181,0.695-0.181,1.006,0l4.803,2.822c0.759,0.445,1.666-0.23,1.468-1.089l-1.288-5.345
+          c-0.081-0.365,0.035-0.729,0.313-0.975l4.34-3.811C21.219,7.921,20.855,6.848,19.998,6.766z"
+              />
+            </svg>
+          </div>
+          <div class="timeline-content right">
+            <h2>CUỘC THI SINH VIÊN VỚI TÀI CHÍNH - FSC</h2>
+            <div class="description-text">
+              <p>
+                Cuộc thi Sinh viên với Tài chính hay Financial Student Contest
+                (FSC) là hoạt động lớn nhất và tiểu biểu nhất của CLB Tài chính
+                - Chứng khoán SeSC. Được tổ chức thường niên vào tháng 3 hằng
+                năm, FSC ra tạo sân chơi cho các bạn trẻ đam mê Tài chính nói
+                chung và Chứng khoán nói riêng được thử sức mình.
+              </p>
+              <p>
+                Bên cạnh đó, cuộc thi còn là cầu nối giữa Nhà tuyển dụng và sinh
+                viên, hỗ trợ sinh viên trong những định hướng phát triển và lựa
+                chọn việc làm thích hợp trong tương lai.
+              </p>
+              <p>
+                Trải qua 10 mùa, cuộc thi FSC đã tạo dựng được thương hiệu uy
+                tín và thu hút sự quan tâm của đông đảo sinh viên toàn quốc.
+                Tiếp nối thành công của các mùa trước, Cuộc thi “Sinh viên với
+                Tài chính FSC” mùa 11 hứa hẹn sẽ mang đến những đổi mới về nội
+                dung, mới mẻ và hấp dẫn hơn cho cộng đồng.
+              </p>
+            </div>
+            <a
+              href="https://www.facebook.com/sinhvienvoitaichinh"
+              target="_blank"
+              class="btn"
+              >KHÁM PHÁ NGAY</a
+            >
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- Bootstrap JavaScript Libraries -->
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
@@ -367,5 +562,15 @@
       integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz"
       crossorigin="anonymous"
     ></script>
+
+    <!-- jquery -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"
+      integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+
+    <script src="/test.js"></script>
   </body>
 </html>
